--- a/charts/supabase/templates/secrets/dashboard.yaml
+++ b/charts/supabase/templates/secrets/dashboard.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.secret.dashboard }}
+{{- if eq .Values.secret.dashboard.auth_type "basic" }}
 {{- if not .Values.secret.dashboard.secretRef }}
 apiVersion: v1
 kind: Secret
