--- a/charts/supabase/templates/test/secretrefs.yaml
+++ b/charts/supabase/templates/test/secretrefs.yaml
@@ -30,6 +30,7 @@ data:
   username: eW91ci1tYWlsQGV4YW1wbGUuY29t
   password: ZXhhbXBsZTEyMzQ1Ng==
 {{- end }}
+{{- if eq .Values.secret.dashboard.auth_type "basic" }}
 {{- if .Values.secret.dashboard.secretRef }}
 ---
 apiVersion: v1
@@ -44,6 +45,7 @@ type: Opaque
 data:
   username: c3VwYWJhc2U=
   password: dGhpc19wYXNzd29yZF9pc19pbnNlY3VyZV9hbmRfc2hvdWxkX2JlX3VwZGF0ZWQ=
+{{- end }}
 {{- end }}
 {{- if .Values.secret.db.secretRef }}
 ---
